force-app/main/default/objects/Renewal_Pricing_Entry__c/Renewal_Pricing_Entry__c.object-meta.xml
<CustomObject>
    <label>Renewal Pricing Entry</label>
    <nameField>
        <displayFormat>RPE-{00000}</displayFormat>
        <label>Renewal Pricing Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Renewal Pricing Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>