force-app/main/default/objects/Renewal_Pricing_Entry__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Renewal Pricing Entries</relationshipLabel>
    <relationshipName>Renewal_Pricing_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>