force-app/main/default/objects/Renewal_Pricing_Entry__c/fields/Entity__c.field-meta.xml
<CustomField>
    <fullName>Entity__c</fullName>
    <label>Entity / Company</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Itesso BV</fullName>
            </value>
            <value>
                <fullName>Newmarket AP</fullName>
            </value>
            <value>
                <fullName>Newmarket AUS</fullName>
            </value>
            <value>
                <fullName>Newmarket China</fullName>
            </value>
            <value>
                <fullName>Newmarket Elim - AP</fullName>
            </value>
            <value>
                <fullName>Newmarket Elimination</fullName>
            </value>
            <value>
                <fullName>Newmarket IFRS</fullName>
            </value>
            <value>
                <fullName>Newmarket MAU</fullName>
            </value>
            <value>
                <fullName>Newmarket Miami</fullName>
            </value>
            <value>
                <fullName>Newmarket UK</fullName>
            </value>
            <value>
                <fullName>Newmarket US</fullName>
            </value>
            <value>
                <fullName>NMTI Holdings, Inc.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>