force-app/main/default/objects/Renewal_Pricing_Entry__c/fields/Percent_Increase__c.field-meta.xml
<CustomField>
    <fullName>Percent_Increase__c</fullName>
    <label>Percent Increase</label>
    <precision>5</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>