force-app/main/default/objects/Renewal_Pricing_Entry__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Renewal Pricing Entries</relationshipLabel>
    <relationshipName>Renewal_Pricing_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>