force-app/main/default/objects/Renewal_Pricing_Entry__c/fields/Renewal_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Pricebook__c</fullName>
    <label>Renewal Pricebook</label>
    <referenceTo>Renewal_Pricebook__c</referenceTo>
    <relationshipLabel>Renewal Pricing Entries</relationshipLabel>
    <relationshipName>Renewal_Pricing_Entries</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>