force-app/main/default/objects/Renewal_Pricing_Entry__c/recordTypes/Account.recordType-meta.xml
<RecordType>
    <fullName>Account</fullName>
    <active>false</active>
    <description>Use this record type for Account specific renewal price increases</description>
    <label>Account</label>
</RecordType>