force-app/main/default/objects/Renewal_Pricing_Entry__c/recordTypes/CPI.recordType-meta.xml
<RecordType>
    <fullName>CPI</fullName>
    <active>false</active>
    <description>Use this record type to track the global CPI increases on a periodic basis</description>
    <label>CPI</label>
</RecordType>