force-app/main/default/objects/Renewal_Pricing_Entry__c/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <description>This is for entity specific increases such as Newmarket US vs. Newmarket AP etc.</description>
    <label>Default</label>
</RecordType>