force-app/main/default/objects/Renewal_Pricing_Entry__c/recordTypes/Product.recordType-meta.xml
<RecordType>
    <fullName>Product</fullName>
    <active>false</active>
    <description>Use this record type for Product / SKU specific renewal price increases</description>
    <label>Product</label>
</RecordType>